--- a/src/bookstore/gui/xml/AddCategory.fxml
+++ b/src/bookstore/gui/xml/AddCategory.fxml
@@ -10,11 +10,12 @@
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.effect.MotionBlur?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="650.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="bookstore.gui.controllers.AddCategoryController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="650.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.AddCategoryController">
     <stylesheets>
         <URL value="@addcategory.css" />
     </stylesheets>
@@ -58,7 +59,7 @@
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </BottomNavigationButton>
-            <BottomNavigationButton layoutX="111.0" layoutY="251.0" prefWidth="93.0" style="-fx-background-color: grey;" text="Choose file...">
+            <BottomNavigationButton layoutX="110.0" layoutY="251.0" prefWidth="93.0" style="-fx-background-color: grey;" text="Choose file...">
                <effect>
                   <MotionBlur />
                </effect>
@@ -68,7 +69,7 @@
             </BottomNavigationButton>
          </children>
       </AnchorPane>
-      <BottomNavigationButton fx:id="btn_save" layoutX="171.0" layoutY="492.0" prefHeight="32.0" prefWidth="130.0" style="-fx-background-color: #0f1563;" text="save">
+      <BottomNavigationButton fx:id="btn_save" layoutX="171.0" layoutY="492.0" prefHeight="32.0" prefWidth="130.0" styleClass="mainFxmlClass" text="save">
          <font>
             <Font name="System Bold" size="26.0" />
          </font>
@@ -76,8 +77,11 @@
             <InnerShadow />
          </effect>
       </BottomNavigationButton>
-      <BottomNavigationButton cancelButton="true" layoutX="330.0" layoutY="492.0" prefHeight="32.0" prefWidth="124.0" style="-fx-background-color: #0f1563;" text="Cancel" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="30.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true" />
+      <BottomNavigationButton cancelButton="true" layoutX="330.0" layoutY="492.0" prefHeight="32.0" prefWidth="124.0" style="-fx-background-color: #adaeb3;" text="Cancel" />
+      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="25.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@img/home.PNG" />
+         </image></ImageView>
    </children>
    <effect>
       <Glow />
