--- a/src/bookstore/gui/xml/AddBook.fxml
+++ b/src/bookstore/gui/xml/AddBook.fxml
@@ -3,6 +3,7 @@
 <?import com.gluonhq.charm.glisten.control.AutoCompleteTextField?>
 <?import com.gluonhq.charm.glisten.control.BottomNavigationButton?>
 <?import com.gluonhq.charm.glisten.control.DropdownButton?>
+<?import java.net.URL?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
@@ -14,9 +15,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="650.0" styleClass="mainFxmlClass" stylesheets="@addbook.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.AddCategoryController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="650.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.AddCategoryController">
+    <stylesheets>
+        <URL value="@addcategory.css" />
+    </stylesheets>
    <children>
-      <AnchorPane layoutX="41.0" layoutY="113.0" prefHeight="351.0" prefWidth="273.0" style="-fx-background-color: white;" styleClass="card" stylesheets="@addbook.css">
+      <AnchorPane layoutX="41.0" layoutY="113.0" prefHeight="351.0" prefWidth="273.0" style="-fx-background-color: white;">
          <children>
             <AutoCompleteTextField id="isbn" fx:id="isbn" layoutX="117.0" layoutY="58.0" />
             <Label layoutX="27.0" layoutY="75.0" text="ISBN:" />
@@ -28,16 +32,16 @@
             <Label layoutX="26.0" layoutY="249.0" text="Price" />
          </children>
       </AnchorPane>
-      <Label contentDisplay="CENTER" ellipsisString="" layoutX="238.0" layoutY="31.0" prefHeight="44.0" prefWidth="166.0" text="Add Book" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+      <Label contentDisplay="CENTER" ellipsisString="" layoutX="247.0" layoutY="21.0" prefHeight="44.0" prefWidth="166.0" text="Add Book" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
          <font>
             <Font name="Arial Bold" size="29.0" />
          </font>
       </Label>
-      <AnchorPane layoutX="325.0" layoutY="113.0" prefHeight="351.0" prefWidth="273.0" style="-fx-background-color: white;" styleClass="card" stylesheets="@addbook.css">
+      <AnchorPane layoutX="325.0" layoutY="113.0" prefHeight="351.0" prefWidth="273.0" style="-fx-background-color: white;">
          <children>
             <Label layoutX="26.0" layoutY="135.0" text="Category:" />
-            <AutoCompleteTextField id="isbn" fx:id="title1" layoutX="116.0" layoutY="63.0" />
-            <Label layoutX="21.0" layoutY="76.0" text="Editing House:" />
+            <AutoCompleteTextField id="isbn" fx:id="title1" layoutX="116.0" layoutY="80.0" />
+            <Label layoutX="21.0" layoutY="93.0" text="Editing House:" />
             <Label layoutX="26.0" layoutY="192.0" text="Resource:" />
             <Label layoutX="26.0" layoutY="249.0" text="cover" />
             <DropdownButton fx:id="category" layoutX="116.0" layoutY="131.0">
@@ -74,7 +78,7 @@
          </effect>
       </BottomNavigationButton>
       <BottomNavigationButton cancelButton="true" layoutX="330.0" layoutY="492.0" prefHeight="32.0" prefWidth="124.0" style="-fx-background-color: #adaeb3;" text="Cancel" />
-      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="25.0" layoutY="28.0" onMouseClicked="#Back" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="25.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@img/home.PNG" />
          </image></ImageView>
