--- a/src/bookstore/gui/xml/addbook.css
+++ b/src/bookstore/gui/xml/addbook.css
@@ -8,6 +8,9 @@
 .save_btn{
 -fx-background-image: linear-gradient(to right top, #005eff, #4e53f9, #6f45f1, #8833e7, #9d14dc);
 }
-
+.card{
+    -fx-border-radius:25px;
+    -fx-background-radius:25px;
+}
 
 
