--- a/src/bookstore/gui/xml/HomeUser.fxml
+++ b/src/bookstore/gui/xml/HomeUser.fxml
@@ -1,54 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Font?>
 
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
-    <top>
-        <BorderPane  styleClass="border-panel-header" stylesheets="@homeuser.css"  >
-            <center>
-                <Label alignment="TOP_CENTER" maxWidth="Infinity" textFill="WHITE">
-                    <text>The avengers Book-store</text>
-                    <font>
-                        <Font name="Arial Bold Italic" size="21.0">
-                        </Font>
-                    </font>
-                    <padding>
-                        <Insets bottom="20" left="20" right="20" top="20" />
-                    </padding>            
-                </Label>
-            </center>
-            <left> 
-                <ImageView>
-                    <Image url="@img/books.PNG" />
-                </ImageView>
-            </left>
-        </BorderPane>
-          
-    </top>
-    <center>
-        <Label alignment="CENTER" maxWidth="Infinity" style="-fx-wrap-text: true">
-            <font>
-                <Font name="Arial" size="16">
-                </Font>
-            </font>
-            <padding>
-                <Insets bottom="20" left="80" right="80" top="20" />
-            </padding>
-        </Label>
-       
-    </center>
-    <bottom>
-        <Label alignment="BOTTOM_CENTER" maxWidth="Infinity" style="-fx-border-color: #C8C8C8;                -fx-border-width: 1 0 0 0;                -fx-border-style: solid">
-            <text>Copyright callicoder.com</text>
-            <padding>
-                <Insets bottom="20" left="20" right="20" top="20" />
-            </padding>
-        </Label>
-    </bottom>
-</BorderPane>
+<AnchorPane prefHeight="1200.0" prefWidth="786.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <BorderPane prefHeight="1200.0" prefWidth="786.0">
+         <top>
+            <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+         </top>
+      </BorderPane>
+   </children>
+</AnchorPane>
