--- a/src/bookstore/gui/xml/Cart.fxml
+++ b/src/bookstore/gui/xml/Cart.fxml
@@ -9,80 +9,86 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="800" prefWidth="1280" stylesheets="@cart.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" >   <children>
-      <ListView fx:id="bookµList" layoutX="38.0" layoutY="85.0" prefHeight="507.0" prefWidth="506.0" style="-fx-background-radius: 25px;" />
-      <Pane layoutX="596.0" layoutY="85.0" prefHeight="642.0" prefWidth="630.0" style="-fx-background-color: rgba(255,255,255,0.25); -fx-background-radius: 25px;">
+<AnchorPane id="AnchorPane" fx:id="containtCreator" prefHeight="800" prefWidth="1200.0" stylesheets="@cart.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.CartController">   <children>
+      <ListView fx:id="bookList" layoutX="37.0" layoutY="97.0" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#myBooks" prefHeight="499.0" prefWidth="466.0" style="-fx-background-radius: 25px; font-family: monospace; -fx-border-radius: 25px; -fx-padding: 10px; font size: 24px;" />  
+
+      <Pane layoutX="538.0" layoutY="99.0" prefHeight="622.0" prefWidth="638.0" style="-fx-background-color: rgba(255,255,255,0.25); -fx-background-radius: 25px;">
          <children>
-            <Button fx:id="nextBook" layoutX="561.0" layoutY="586.0" mnemonicParsing="false" style="-fx-background-color: #ff6347; -fx-background-radius: 25px;" text="→" textFill="WHITE">
+            <Button fx:id="nextBook" layoutX="563.0" layoutY="569.0" mnemonicParsing="false" onAction="#next" style="-fx-background-color: #ff6347; -fx-background-radius: 25px;" text="→" textFill="WHITE">
                <font>
                   <Font name="Arial Narrow Bold" size="23.0" />
                </font>
             </Button>
-            <Button fx:id="lastBook" layoutX="14.0" layoutY="586.0" mnemonicParsing="false" style="-fx-background-color: #ff6347; -fx-background-radius: 25px;" text="←" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="lastBook" layoutX="22.0" layoutY="569.0" mnemonicParsing="false" onAction="#last" style="-fx-background-color: #ff6347; -fx-background-radius: 25px;" text="←" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Arial Narrow Bold" size="23.0" />
                </font>
             </Button>
-            <Pane fx:id="bookCover" layoutX="22.0" layoutY="120.0" prefHeight="433.0" prefWidth="351.0" style="-fx-background-color: white; -fx-background-radius: 25px;" />
-            <Label layoutX="270.0" layoutY="21.0" text="BOOK1" textFill="WHITE">
+            <Pane fx:id="bookCover" layoutX="22.0" layoutY="120.0" prefHeight="433.0" prefWidth="319.0" style="-fx-background-color: white; -fx-background-radius: 25px;" />
+            <Label fx:id="title" layoutX="95.0" layoutY="36.0" text="BOOK1" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
-            <Label layoutX="396.0" layoutY="118.0" text="Name : test">
+            <Label fx:id="name" layoutX="386.0" layoutY="136.0" prefHeight="35.0" prefWidth="121.0" text="Name : ">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label layoutX="395.0" layoutY="166.0" text="Writer : test">
+            <Label fx:id="writer" layoutX="385.0" layoutY="186.0" prefHeight="35.0" prefWidth="138.0" text="Writer :">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label layoutX="395.0" layoutY="217.0" text="Type : test">
+            <Label fx:id="type" layoutX="386.0" layoutY="234.0" text="Categories:">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label layoutX="249.0" layoutY="590.0" text="Price : ---DTN" textFill="RED">
+            <Label fx:id="price" layoutX="249.0" layoutY="590.0" text="Price : ---DTN" textFill="RED">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label layoutX="395.0" layoutY="280.0" text="Date : test">
+            <Label fx:id="rating" layoutX="291.0" layoutY="77.0" text="Rating : ">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label layoutX="396.0" layoutY="379.0" prefHeight="35.0" prefWidth="138.0" text="Discription : test">
+            <Label fx:id="disc" layoutX="382.0" layoutY="383.0" prefHeight="169.0" prefWidth="278.0" text="Discription :">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label layoutX="42.0" layoutY="83.0" prefHeight="35.0" prefWidth="82.0" text="Cover">
+            <Label fx:id="usr" layoutX="385.0" layoutY="286.0" text="Containt Creator :">
                <font>
-                  <Font size="20.0" />
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="house" layoutX="386.0" layoutY="337.0" prefHeight="43.0" prefWidth="195.0" text="Edition House : ">
+               <font>
+                  <Font size="24.0" />
                </font>
             </Label>
          </children>
       </Pane>
-      <Button fx:id="remove" layoutX="49.0" layoutY="670.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15;" text="Remove" textFill="WHITE">
+      <Button fx:id="remove" layoutX="48.0" layoutY="674.0" mnemonicParsing="false" onAction="#btnr" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15;" text="Remove" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font></Button>
-      <Button fx:id="buy" layoutX="371.0" layoutY="670.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="146.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15px;" text="Buy Cart" textFill="WHITE">
+      <Button fx:id="buy" layoutX="364.0" layoutY="674.0" mnemonicParsing="false" onAction="#btnb" prefHeight="38.0" prefWidth="152.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15px;" text="Buy Cart" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font></Button>
-      <Button fx:id="clearCart" layoutX="218.0" layoutY="670.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="130.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15px;" text="Clear Cart" textFill="WHITE">
+      <Button fx:id="clearCart" layoutX="201.0" layoutY="674.0" mnemonicParsing="false" onAction="#btnc" prefHeight="38.0" prefWidth="146.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15px;" text="Clear Cart" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font></Button>
-      <Button fx:id="search" layoutX="325.0" layoutY="619.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="174.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15px;" text="Search" textFill="WHITE">
+      <Button fx:id="search" layoutX="360.0" layoutY="623.0" mnemonicParsing="false" onAction="#btns" prefHeight="38.0" prefWidth="152.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15px;" text="Search" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font></Button>
-      <TextField layoutX="43.0" layoutY="619.0" prefHeight="38.0" prefWidth="267.0" style="-fx-background-radius: 25px;">
+      <TextField fx:id="searchBar" layoutX="191.0" layoutY="623.0" prefHeight="38.0" prefWidth="159.0" style="-fx-background-radius: 25px;">
          <font>
             <Font size="16.0" />
          </font></TextField>
@@ -91,6 +97,11 @@
             <Font name="Bodoni MT Condensed Bold" size="51.0" />
          </font>
       </Label>
+      <Button fx:id="cnl" layoutX="48.0" layoutY="623.0" mnemonicParsing="false" onAction="#btncnl" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15;" text="Cancel" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
    </children>
    <styleClass>
       <String fx:value="mainFxmlClass" />
