--- a/src/bookstore/gui/xml/item.fxml
+++ b/src/bookstore/gui/xml/item.fxml
@@ -12,18 +12,17 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.Rating?>
 
-
-<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="393.0" prefWidth="310.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="bookstore.gui.controllers.ItemController">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="393.0" prefWidth="310.0" style="-fx-background-radius: 10; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.ItemController">
    <children>
-      <VBox>
+      <VBox style="-fx-background-radius: 10; -fx-border-radius: 10;">
          <children>
             <VBox>
                <children>
                   <VBox prefHeight="157.0" prefWidth="310.0">
                      <children>
-                        <ImageView fitHeight="199.0" fitWidth="309.0" pickOnBounds="true">
+                        <ImageView fx:id="img" fitHeight="199.0" fitWidth="309.0" pickOnBounds="true">
                            <image>
-                              <Image url="@../../../../../../../Images/dafault.png" />
+                              <Image url="@../../../../../../../../../../image/dafault.png" />
                            </image>
                         </ImageView>
                      </children>
@@ -32,9 +31,9 @@
             </VBox>
             <HBox VBox.vgrow="ALWAYS">
                <children>
-                  <VBox prefHeight="149.0" prefWidth="200.0">
+                  <VBox prefHeight="173.0" prefWidth="215.0">
                      <children>
-                        <Label text="Book title" textFill="#18349a">
+                        <Label fx:id="title" prefHeight="26.0" prefWidth="197.0" text="Book title" textFill="#18349a" wrapText="true">
                            <font>
                               <Font name="System Bold" size="17.0" />
                            </font>
@@ -42,7 +41,7 @@
                               <Insets left="5.0" />
                            </VBox.margin>
                         </Label>
-                        <Label text="By: Book Author" textFill="#4a4646">
+                        <Label fx:id="author" text="By: Book Author" textFill="#4a4646" wrapText="true">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -50,7 +49,7 @@
                               <Insets left="5.0" />
                            </VBox.margin>
                         </Label>
-                        <Label text="Book cathegory" textFill="#433d3d">
+                        <Label fx:id="bcategory" text="Book cathegory" textFill="#433d3d" wrapText="true">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -58,7 +57,7 @@
                               <Insets left="5.0" />
                            </VBox.margin>
                         </Label>
-                        <Label prefHeight="26.0" prefWidth="102.0" text="50.99TND" textFill="#756c68" VBox.vgrow="ALWAYS">
+                        <Label fx:id="price" prefHeight="26.0" prefWidth="102.0" text="50.99TND" textFill="#756c68" wrapText="true" VBox.vgrow="ALWAYS">
                            <VBox.margin>
                               <Insets left="10.0" />
                            </VBox.margin>
@@ -66,7 +65,7 @@
                               <Font name="System Bold" size="17.0" />
                            </font>
                         </Label>
-                        <Rating fx:id="avgRating" onDragDetected="#rate" onDragDone="#rate" onDragDropped="#rate" onDragEntered="#rate" onDragExited="#rate" onDragOver="#rate" onMouseDragEntered="#rate" onMouseDragExited="#tare" onMouseDragOver="#rate" onMouseDragReleased="#rate" rating="0.0" updateOnHover="true">
+                        <Rating fx:id="avgRating" rating="0.0" updateOnHover="true">
                            <effect>
                               <DropShadow color="#dd43db" />
                            </effect>
@@ -84,7 +83,7 @@
                         </JFXButton>
                      </children>
                   </VBox>
-                  <Label text="(123700)">
+                  <Label fx:id="nbRating" prefHeight="26.0" prefWidth="70.0" text="(123700)">
                      <HBox.margin>
                         <Insets left="15.0" right="25.0" top="105.0" />
                      </HBox.margin>
