--- a/src/bookstore/gui/xml/HomePage.fxml
+++ b/src/bookstore/gui/xml/HomePage.fxml
@@ -4,21 +4,18 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.HomePageController">
    <top>
       <HBox prefHeight="59.0" prefWidth="1200.0" spacing="10.0">
          <children>
@@ -80,45 +77,35 @@
    <center>
       <BorderPane prefHeight="91.0" prefWidth="1195.0">
          <top>
-            <Pane prefHeight="52.0" prefWidth="1089.0" styleClass="card" stylesheets="@homepage.css" BorderPane.alignment="CENTER">
+            <HBox BorderPane.alignment="CENTER">
                <BorderPane.margin>
                   <Insets bottom="30.0" left="50.0" right="50.0" top="20.0" />
                </BorderPane.margin>
                <children>
-                  <Label layoutX="50.0" layoutY="14.0" prefHeight="32.0" prefWidth="1000.0" text="“There is more treasure in books than in all the pirate’s loot on Treasure Island.”– Walt Disney">
-                     <font>
-                        <Font name="System Bold Italic" size="22.0" />
-                     </font>
-                  </Label>
+                  <Pane prefHeight="52.0" prefWidth="1089.0" styleClass="card" stylesheets="@homepage.css">
+                     <children>
+                        <Label layoutX="50.0" layoutY="14.0" prefHeight="32.0" prefWidth="1000.0" text="“There is more treasure in books than in all the pirate’s loot on Treasure Island.”– Walt Disney">
+                           <font>
+                              <Font name="System Bold Italic" size="22.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
                </children>
-            </Pane>
+            </HBox>
          </top>
          <center>
-            <HBox prefHeight="598.0" prefWidth="1170.0" BorderPane.alignment="CENTER">
+            <HBox prefHeight="750.0" prefWidth="1150.0" BorderPane.alignment="CENTER">
                <children>
-                  <ScrollPane prefHeight="538.0" prefWidth="1206.0">
+                  <ScrollPane prefHeight="538.0" prefWidth="1206.0" styleClass="transparent" stylesheets="@homepage.css">
+                     <HBox.margin>
+                        <Insets bottom="25.0" left="50.0" right="50.0" />
+                     </HBox.margin>
                      <content>
-                        <GridPane prefHeight="540.0" prefWidth="1200.0">
+                        <GridPane fx:id="grid">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0">
-                                <items>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                       <children>
-                                          <ImageView fitHeight="272.0" fitWidth="180.0" pickOnBounds="true" preserveRatio="true" />
-                                       </children>
-                                    </AnchorPane>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
-                                </items>
-                              </SplitPane>
-                           </children>
                         </GridPane>
                      </content>
                   </ScrollPane>
