--- a/src/bookstore/gui/xml/homepage.css
+++ b/src/bookstore/gui/xml/homepage.css
@@ -15,3 +15,7 @@ mainFxmlClass {
     -fx-effect: dropshadow(three-pass-box, black, 10, 0, 0, 0);
     -fx-margin:10px,5,5,5;
 }
+
+.transparent{
+    -fx-background-color: rgba(0,0,0,0);
+}
