--- a/src/bookstore/gui/xml/item.fxml
+++ b/src/bookstore/gui/xml/item.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.Rating?>
 
-<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-radius: 10; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.ItemController">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="310.0" style="-fx-background-radius: 10; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.ItemController">
    <children>
       <VBox prefHeight="412.0" prefWidth="310.0" style="-fx-background-radius: 10; -fx-border-radius: 10;">
          <children>
@@ -29,7 +29,7 @@
                   </VBox>
                </children>
             </VBox>
-            <HBox prefHeight="213.0" prefWidth="207.0" VBox.vgrow="ALWAYS">
+            <HBox prefHeight="155.0" prefWidth="310.0" VBox.vgrow="ALWAYS">
                <children>
                   <HBox>
                      <children>
