--- a/src/bookstore/gui/xml/AddBooks.fxml
+++ b/src/bookstore/gui/xml/AddBooks.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.CheckComboBox?>
 
-
 <ScrollPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.AddBooksController">
    <content>
       <AnchorPane id="AnchorPane" prefHeight="786.0" prefWidth="1200.0" styleClass="mainFxmlClass">
@@ -105,7 +104,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextArea layoutX="26.0" layoutY="213.0" prefHeight="123.0" prefWidth="228.0" />
+                  <TextArea fx:id="description" layoutX="26.0" layoutY="213.0" prefHeight="123.0" prefWidth="228.0" wrapText="true" />
                </children>
             </AnchorPane>
          </children>
