--- a/src/bookstore/gui/xml/HomePage.fxml
+++ b/src/bookstore/gui/xml/HomePage.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.HomePageController">
    <top>
       <HBox prefHeight="59.0" prefWidth="1200.0" spacing="10.0">
@@ -67,7 +68,7 @@
                </ripplerFill></JFXButton>
             <JFXButton prefHeight="63.0" prefWidth="117.0" text="SignUp" />
             <JFXButton prefHeight="63.0" prefWidth="117.0" text="LogIn" />
-            <JFXButton prefHeight="63.0" prefWidth="117.0" text="Cart" />
+            <JFXButton prefHeight="63.0" prefWidth="117.0" text="Cart" onMouseClicked="#oppenCart" />
          </children>
          <BorderPane.margin>
             <Insets />
