--- a/src/bookstore/gui/xml/Cart.fxml
+++ b/src/bookstore/gui/xml/Cart.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.effect.Light.Distant?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.effect.Shadow?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -16,7 +17,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="containtCreator" prefHeight="800" prefWidth="1200.0" stylesheets="@cart.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.CartController">   <children>
+<AnchorPane id="AnchorPane" prefHeight="800" prefWidth="1200.0" stylesheets="@cart.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.CartController">   <children>
       <ListView fx:id="bookList" fixedCellSize="-100.0" layoutX="38.0" layoutY="344.0" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#myBooks" prefHeight="254.0" prefWidth="466.0" style="-fx-background-radius: 25px; -fx-font-family: fort; -fx-border-radius: 25px; -fx-padding: 10px; font size: 24px;">
          <cursor>
             <Cursor fx:constant="CROSSHAIR" />
@@ -233,6 +234,18 @@
                   <Font name="Forte" size="26.0" />
                </font>
             </Label>
+         </children>
+      </Pane>
+      <Pane layoutX="68.0" layoutY="14.0" prefHeight="93.0" prefWidth="111.0">
+         <children>
+            <ImageView fx:id="homeImg" fitHeight="80.0" fitWidth="79.0" layoutX="16.0" layoutY="7.0" onMouseClicked="#goHome" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@img/home.PNG" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
          </children>
       </Pane>
    </children>
